# ragbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py
src/ragbench/: __init__.py  cli.py  diff.py  judge.py  pipeline_loader.py  report.py  runner.py  types.py
src/ragbench/datasets/: __init__.py  adversarial.py  longtail.py
src/ragbench/metrics/: __init__.py  generation.py  judge_metrics.py
tests/: test_adversarial_diff.py  test_judge.py  test_longtail_loader.py  test_metrics.py  test_runner.py
