[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbench"
version = "1.0.0"
description = "Lightweight RAG pipeline benchmarking framework — synthetic datasets (factual/multi-hop/adversarial/long-tail), retrieval+generation metrics, optional LLM-as-judge, run-diffing, pluggable user pipelines."
authors = [{name = "alvabillwu", email = "alvabill@outlook.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ragbench = "ragbench.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
judge = ["openai>=1.0"]  # optional: LLM-as-judge backend

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
